--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -155,14 +155,6 @@ button {
 //mixins
 //===================
 
-//IE mediaquery
-@mixin ie-only() {
-    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-        /* IE10+ CSS */
-        @content;
-    }
-}
-
 //screensize mediaquery
 @mixin mq($break) {
   $value: map-get($breakpoints, $break);
@@ -400,7 +392,7 @@ button {
         }
     }
 
-    .news:nth-of-type(1) {
+    .card:nth-of-type(1) {
         -ms-grid-column: 1;
         -ms-grid-row: 1;
         margin-bottom: 1em;
@@ -409,7 +401,7 @@ button {
             margin: 0 1em 0 0;
         }
     }
-    .news:nth-of-type(2) {
+    .card:nth-of-type(2) {
         -ms-grid-column: 1;
         -ms-grid-row: 2;
         margin: 1em 0;
@@ -424,7 +416,7 @@ button {
             }
         }
     }
-    .news:nth-of-type(3) {
+    .card:nth-of-type(3) {
         -ms-grid-column: 1;
         -ms-grid-row: 3;
         margin-top: 1em;
